# Motion-Based-Authentication

./: .gitignore  Answers.md  README.md
src/: AuthenticatePattern.qml  CMakeLists.txt  Calibrate.qml  Main.qml  ProgressXYZBar.qml  RecordNewPattern.qml  accelerometermanager.cpp  accelerometermanager.h  customaccelerometerfilter.cpp  customaccelerometerfilter.h  customgyroscopefilter.cpp  customgyroscopefilter.h  gyroscopemanager.cpp  gyroscopemanager.h  main.cpp  path.cpp  path.h  qmldir  qtquickcontrols2.conf  sensorsshowcase.pro  verifier.cpp  verifier.h
